--- a/public/assets/styles/css/lightStyle.css
+++ b/public/assets/styles/css/lightStyle.css
@@ -4,6 +4,7 @@
 
 :root {
   --color-primary: #0198af;
+  --color-primary2:#026f80;
   --color-secondary: #f8f9fa;
   --color-accent: #253045;
   --color-success: #00e6b3;
