--- a/public/assets/styles/css/styles.css
+++ b/public/assets/styles/css/styles.css
@@ -102,7 +102,7 @@ a:hover{
     max-width: 300px;
     height: auto;
     border-radius: 10px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 5px 15px var(--color-accent);
 }
 
 .about-content {
@@ -127,6 +127,7 @@ a:hover{
 .value-icon {
     font-size: 2.5rem;
     margin-bottom: 15px;
+    color: var(--color-primary2);
 }
 
 @media (max-width: 768px) {
